--- a/new.html
+++ b/new.html
@@ -54,8 +54,8 @@
 
 				<form>
 					<div class="form-group">
-						<label for="userName">Customer name</label>
-						<input type="text" class="form-control" id="userName">
+						<label for="callerName">Caller name</label>
+						<input type="text" class="form-control" id="callerName">
 					</div>
 					<div class="form-group">
 						<label for="staffEmail">Contact email</label>
