--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Helpdesk - Home</title>
 
 	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
