--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Helpdesk - Home</title>
+	<meta name=viewport content="width=device-width, initial-scale=1">
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
@@ -46,7 +47,7 @@
 	</nav>
 
 	<div class="container">
-		<div class="row" style="margin-bottom: 30px;">
+		<div class="row">
 			<div class="col-6">
 				<h2>Tickets</h2>
 			</div>
@@ -59,35 +60,37 @@
 				</div>
 			</div>
 		</div>
+		<hr>
+
 		<div class="row">
 			<div class="col">
 				<div class="list-group">
 					<div class="list-group-item flex-column align-items-start list-heading">
 						<div class="d-flex flex-row">
 							<div class="p-2 col"><b>Problem number</b></div>
-							<div class="p-2 col"><b>Problem type</b></div>
-							<div class="p-2 col"><b>Problem summary</b></div>
 							<div class="p-2 col"><b>Time submitted</b></div>
 							<div class="p-2 col"><b>Status</b></div>
+							<div class="p-2 col"><b>Problem type</b></div>
+							<div class="p-2 col"><b>Problem summary</b></div>
 						</div>
 					</div>
 
 					<a href="issue.html" class="list-group-item list-group-item-action flex-column align-items-start">
 						<div class="d-flex flex-row">
-							<div class="p-2 col"><b>1234</b></div>
-							<div class="p-2 col">Printer issue</div>
-							<div class="p-2 col">Printer is jammed</div>
-							<div class="p-2 col">10-12-2017 15:00</div>
-							<div class="p-2 col"><span class="green">Ongoing</span></div>
+							<div class="p-2 col col-overflow"><b>1234</b></div>
+							<div class="p-2 col col-overflow">20-10-2017 09:00</div>
+							<div class="p-2 col col-overflow"><span class="green">Ongoing</span></div>
+							<div class="p-2 col col-overflow">Printer issue</div>
+							<div class="p-2 col col-overflow">Documents not printing</div>
 						</div>
 					</a>
 					<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
 						<div class="d-flex flex-row">
-							<div class="p-2 col"><b>9999</b></div>
-							<div class="p-2 col">Software issue</div>
-							<div class="p-2 col">Web browser not opening</div>
-							<div class="p-2 col">11-10-2017 09:00</div>
-							<div class="p-2 col"><span class="orange">Pending</span></div>
+							<div class="p-2 col col-overflow"><b>1235</b></div>
+							<div class="p-2 col col-overflow">20-10-2017 09:01</div>
+							<div class="p-2 col col-overflow"><span class="orange">Pending</span></div>
+							<div class="p-2 col col-overflow">Software issue</div>
+							<div class="p-2 col col-overflow">Web browser not opening</div>
 						</div>
 					</a>
 				</div>
