--- a/analytics.html
+++ b/analytics.html
@@ -33,7 +33,7 @@
 			<form class="form-inline my-2 my-lg-0">
 				<div class="input-group">
 					<span class="input-group-addon" id="basic-addon1">Current user:</span>
-					<select class="custom-select">
+					<select class="custom-select" id="user-select">
 						<option>Tom Snelling</option>
 						<option>Dan Page</option>
 						<option>Adam Morley</option>
