--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<form class="form-inline my-2 my-lg-0">
 				<div class="input-group">
 					<span class="input-group-addon" id="basic-addon1">Current user:</span>
-					<select class="custom-select">
+					<select class="custom-select" id="user-select">
 						<option>Tom Snelling</option>
 						<option>Dan Page</option>
 						<option>Adam Morley</option>
@@ -56,6 +56,14 @@
 					<input type="text" class="form-control" placeholder="Find a problem...">
 					<span class="input-group-btn">
 						<button class="btn btn-primary" type="button">Search</button>
+						<button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<a class="dropdown-item" href="#">Something else here</a>
+							<div role="separator" class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Separated link</a>
+						</div>
 					</span>
 				</div>
 			</div>
