--- a/issue.html
+++ b/issue.html
@@ -34,7 +34,7 @@
 			<form class="form-inline my-2 my-lg-0">
 				<div class="input-group">
 					<span class="input-group-addon" id="basic-addon1">Current user:</span>
-					<select class="custom-select">
+					<select class="custom-select" id="user-select">
 						<option>Tom Snelling</option>
 						<option>Dan Page</option>
 						<option>Adam Morley</option>
@@ -53,6 +53,11 @@
 				<form>
 					<h2 style="display: inline;">Status: <span class="green">Ongoing</span></h2>
 					<h2 style="display: inline; float: right;"> Created at: <span id="createdAt">20-10-2017 09:00</span></h2>
+					<div class="tags">
+						<span class="badge badge-secondary">printer</span>
+						<span class="badge badge-secondary">hardware</span>
+						<span class="badge badge-secondary">jammed</span>
+					</div>
 					<hr> 
 
 					<div class="form-group">
