--- a/new.html
+++ b/new.html
@@ -33,7 +33,7 @@
 			<form class="form-inline my-2 my-lg-0">
 				<div class="input-group">
 					<span class="input-group-addon" id="basic-addon1">Current user:</span>
-					<select class="custom-select">
+					<select class="custom-select" id="user-select">
 						<option>Tom Snelling</option>
 						<option>Dan Page</option>
 						<option>Adam Morley</option>
@@ -138,7 +138,7 @@
 						</form>
 					</div>
 				</div>
-				<button type="button" class="btn btn-primary" id="button-create" style="width: 100%;">Create issue</button>
+				<button type="button" class="btn btn-primary" id="button-create" style="float: right;">Create issue</button>
 			</div>
 		</div>
 	</div>
