minor changes to existing issue layout

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<div class="d-flex flex-row">
 							<div class="p-2 col col-overflow"><b>1234</b></div>
 							<div class="p-2 col col-overflow">20-10-2017 09:00</div>
-							<div class="p-2 col col-overflow"><span class="green">Ongoing</span></div>
+							<div class="p-2 col col-overflow"><span class="orange">Ongoing</span></div>
 							<div class="p-2 col col-overflow">Printer issue</div>
 							<div class="p-2 col col-overflow">Documents not printing</div>
 						</div>
@@ -96,7 +96,7 @@
 						<div class="d-flex flex-row">
 							<div class="p-2 col col-overflow"><b>1235</b></div>
 							<div class="p-2 col col-overflow">20-10-2017 09:01</div>
-							<div class="p-2 col col-overflow"><span class="orange">Pending</span></div>
+							<div class="p-2 col col-overflow"><span class="red">Pending</span></div>
 							<div class="p-2 col col-overflow">Software issue</div>
 							<div class="p-2 col col-overflow">Web browser not opening</div>
 						</div>
