add fontawesome & resolution modal

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="js/common.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -50,7 +51,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-6">
-				<h2>Tickets</h2>
+				<h2><i class="fa fa-ticket"></i> Tickets</h2>
 			</div>
 			<div class="col-6">
 				<div class="input-group">
