--- a/analytics.html
+++ b/analytics.html
@@ -10,6 +10,7 @@
 	<script src="js/common.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -50,12 +51,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h2>Analytics</h2>
+				<h2><i class="fa fa-line-chart"></i> Analytics</h2>
 				<hr>
 
 				<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
 					<li class="nav-item">
-						<a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#open-queries" role="tab" aria-controls="pills-home" aria-expanded="true">Open tickets</a>
+						<a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#open-queries" role="tab" aria-controls="pills-home" aria-expanded="true">Operators</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#other-stats" role="tab" aria-controls="pills-home" aria-expanded="true">Other statistics</a>
