--- a/new.html
+++ b/new.html
@@ -8,8 +8,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/common.js"></script>
+	<script src="js/create-issue.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -50,10 +52,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h2>Create a new ticket</h2>
+				<h2><i class="fa fa-plus"></i> Create a new ticket</h2>
 				<hr>
 
 				<form>
+					<div class="form-group">
+						<label for="created-by">Created by</label>
+						<h4 id="created-by"></h4>
+					</div>
 					<div class="form-group">
 						<label for="callerName">Caller name</label>
 						<input type="text" class="form-control" id="callerName">
