changed pills for tabs

--- a/issue.html
+++ b/issue.html
@@ -32,6 +32,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="analytics.html">Analytics</a>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Issue #1234</a>
+				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<div class="input-group">
