--- a/analytics.html
+++ b/analytics.html
@@ -54,7 +54,7 @@
 				<h2><i class="fa fa-line-chart"></i> Analytics</h2>
 				<hr>
 
-				<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+				<ul class="nav nav-tabs mb-3" id="pills-tab" role="tablist">
 					<li class="nav-item">
 						<a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#open-queries" role="tab" aria-controls="pills-home" aria-expanded="true">Operators</a>
 					</li>
