add some breakpoints

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<a class="nav-link" href="#">Existing tickets <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="new.html">New Ticket</a>
+					<a class="nav-link" href="new.html">New ticket</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="analytics.html">Analytics</a>
@@ -50,10 +50,10 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-6">
+			<div class="col-md-6">
 				<h2><i class="fa fa-ticket"></i> Tickets</h2>
 			</div>
-			<div class="col-6">
+			<div class="col-md-6">
 				<div class="input-group">
 					<input type="text" class="form-control" placeholder="Find a problem...">
 					<span class="input-group-btn">
