--- a/new.html
+++ b/new.html
@@ -27,7 +27,7 @@
 					<a class="nav-link" href="index.html">Existing tickets</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="#">New Ticket <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">New ticket <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="analytics.html">Analytics</a>
@@ -63,13 +63,13 @@
 			<div class="col-sm-9">
 				<form>
 					<div class="row">
-						<div class="col">
+						<div class="col-sm">
 							<div class="form-group">
 								<label for="callerName">Caller name</label>
 								<input type="text" class="form-control" id="callerName">
 							</div>
 						</div>
-						<div class="col">
+						<div class="col-sm">
 							<div class="form-group">
 								<label for="staffEmail">Contact email</label>
 								<input type="email" class="form-control" id="staffEmail">
@@ -118,24 +118,24 @@
 					<div class="tab-pane fade" id="software" role="tabpanel">
 						<form>
 							<div class="form-group">
-								<label for="operatingsystem">Operating system</label>
+								<label for="operati-smngsystem">Operating system</label>
 		    					<input class="form-control" id="operatingsystem">
 							</div>
 
 							<div class="row">
-								<div class="col">
+								<div class="col-sm">
 									<div class="form-group">
-										<label for="software-name">Software name</label>
+										<label f-smor="software-name">Software name</label>
 				    					<input class="form-control" id="software-name">
 									</div>
 								</div>
-								<div class="col">
+								<div class="col-sm">
 									<div class="form-group">
-										<label for="software-version">Software version</label>
+										<label for="software-sm-version">Software version</label>
 				    					<input class="form-control" id="software-version">
 									</div>
 								</div>
-								<div class="col">
+								<div class="col-sm">
 									<div class="form-group">
 										<label for="userName">Software license code</label>
 										<input type="text" class="form-control" id="SoftwareIssueNumber">
