--- a/analytics.html
+++ b/analytics.html
@@ -26,7 +26,7 @@
 					<a class="nav-link" href="index.html">Existing tickets</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="new.html">New Ticket</a>
+					<a class="nav-link" href="new.html">New ticket</a>
 				</li>
 				<li class="nav-item active">
 					<a class="nav-link" href="analytics.html">Analytics <span class="sr-only">(current)</span></a>
