add open issue tabs

--- a/issue.html
+++ b/issue.html
@@ -32,9 +32,6 @@
 				<li class="nav-item">
 					<a class="nav-link" href="analytics.html">Analytics</a>
 				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Issue #1234</a>
-				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<div class="input-group">
@@ -68,7 +65,7 @@
 			    			<input type="text" class="form-control" id="solved-by">
 						</div>
 						<div class="form-group">
-							<label for="resolution-detail">Problem details</label>
+							<label for="resolution-detail">Resolution details</label>
 							<textarea class="form-control" rows="8" id="resolution-detail"></textarea>
 						</div>
 					</form>
