--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/common.js"></script>
+	<script src="js/all-issues.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -85,7 +86,7 @@
 						</div>
 					</div>
 
-					<a href="issue.html" class="list-group-item list-group-item-action flex-column align-items-start">
+					<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
 						<div class="d-flex flex-row">
 							<div class="p-2 col col-overflow"><b>1234</b></div>
 							<div class="p-2 col col-overflow">20-10-2017 09:00</div>
