--- a/about.html
+++ b/about.html
@@ -48,13 +48,16 @@
 			</form>
 		</div>
 	</nav>
+	
 	<div class="container">
-		<div class = "jumbotron">
-			<h1 align="center">Oh Go On Then</h1>
+		<div class="row">
+			<div class="col">
+				<div class="jumbotron">
+					<h1 class="display-3">Helpdesk</h1>
+					<p class="lead">17COB290 - Team project deliverable part 1</p>
+				</div>
+			</div>
 		</div>
 	</div>
-
-
-	
 </body>
 </html>
