--- a/issue.html
+++ b/issue.html
@@ -12,6 +12,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -80,7 +81,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3 problem-metadata">
+			<div class="col-md-3 problem-metadata animated fadeInUp">
 				<h2><i class="fa fa-ticket"></i> #<span id="problemId">1234</span></h2>
 				<h4>Status: <span class="orange">Ongoing</span></h4>
 				<p><i class="fa fa-clock-o"></i>&nbsp; <span id="createdAt">20-10-2017 09:00</span></p>
@@ -95,7 +96,7 @@
 				<button type="button" class="btn btn-secondary w-100" id="button-edit">Edit this issue</button>
 				<button type="button" class="btn btn-primary w-100" id="button-resolved" data-toggle="modal" data-target="#resolved-modal">Mark as resolved</button>
 			</div>
-			<div class="col-md-9">
+			<div class="col-md-9 animated fadeInUp">
 				<form>
 					<div class="form-group">
 						<div class="row">
